ut2004-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ut2004
  name: ut2004
  namespace: ut2004
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: game-port
    port: 7777
    protocol: UDP
    targetPort: game-port
  selector:
    name: ut2004
  loadBalancerIP: 192.168.8.250
  type: LoadBalancer
